WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
WISH: anyevent mouse notification / manage MotionMask better.
WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep scrollbar look.
WISH: kick out xpm.C, replace by pixbuf
DUMB: support tex fonts

TODO: outline cursor color broken? http://bereft.net/rxvt-cursor2.png http://bereft.net/rxvt-cursor1.png
TODO: add ctype locale info to some menu to aid the "support"
TODO: (exg) rxvt -fn -misc-fixed-medium-r-normal--15-140-75-75-c-90-iso10646-1 U+39b+U+30a wipes out 39b
8.0
	- specified fonts were incorrectly morphed to bold/italic according to the
          basefont, even if explicitly specified (tracked down by tpope).
        - fixed urxvt::strwidth to calculate width in the same way as screen.C.
	- fix a crash caused by passing negative widths to overlay functions.
	- added 'matcher' extension by tpope, replacing the mark-urls extension.
        - improve url regex to match anything www.* (tpope).
	- give proper diagnostic when RXVT_SOCKET is too long instead of
          corrupting the stack (patch by exg).
        - urxvtd no longer crashes when the client sends an inaccessible
          working directory (reported by Roland Baer, possibly fixes gentoo
          bug #143985).
        - fixed many minor issues reported by Roland Baer.
        - Leonid Khramov spotted a minor glitch in rxvtfont.C that
          should not have any consequences, but was buggy nonetheless.
        - update to libptytty-1.0.

7.9  Mon Aug  7 18:16:07 CEST 2006
        - fix the crashing bug people encountered with 7.8 + urxvtd + perl
          + transparency. Ought to fix debian bug #380348.
	- fix urxvtc.1.pod: it actually claimed -pty-fd would not work. But
          it does! :->
	- rxvt_fatal() in case the locale string is too long for our static buffer.